<resources>
    <string name="app_name">The Perfect Lineup</string>
    <string name="new_athlete">New Athlete</string>
    <string name="settings">Settings</string>
    <string name="subtitle_format"> </string>
    <string name="athlete_statistics">Athlete Statistics</string>
    <string name="name">First Name</string>
    <string name="link_athlete_contact">Link Athlete Contact</string>
    <string name="contact_athlete">Contact Athlete</string>
    <string name="height">Height: </string>
    <string name="starboard">Starboard</string>
    <string name="port">Port</string>
    <string name="both">Both</string>
    <string name="coxswain">Coxswain</string>
    <string name="last_name">Last Name</string>
    <string name="_2k_">2k: </string>
    <string name="_6k_">6k: </string>
    <string name="weight">Weight:</string>
    <string name="delete_athlete">Delete Athlete</string>
    <string name="_8_seat">8 Seat</string>
    <string name="_7_seat">7 Seat</string>
    <string name="_6_seat">6 Seat</string>
    <string name="_5_seat">5 Seat</string>
    <string name="_4_seat">4 Seat</string>
    <string name="_3_seat">3 Seat</string>
    <string name="_2_seat">2 Seat</string>
    <string name="_1_seat">1 Seat</string>
    <string name="current_rower">Current Rower:</string>
    <string name="no_rower_selected">No Rower Selected</string>
    <string name="boat_5">Boat 5</string>
    <string name="boat_4">Boat 4</string>
    <string name="boat_3">Boat 3</string>
    <string name="boat_2">Boat 2</string>
    <string name="boat_1">Boat 1</string>
    <string name="boat_specs">Boat Specs</string>
    <string name="delete_boat">Delete Boat</string>
    <string name="msg_errorretrieval">Error while retrieving files</string>
    <string name="msg_noresults">No Results</string>
    <string name="_0_00_0">0:00.0</string>
    <string name="athlete_image">athlete image</string>
    <string name="boats_stats">Boats Stats:</string>
    <string name="avg_2k">Avg 2k: </string>
    <string name="wt_adj_2k">Wt Adj 2k: </string>
    <string name="add_boat">Add Boat</string>
    <string name="add_boat_icon">Add Boat</string>
    <string name="_000_0lb">000.0lb</string>
    <string name="save_to_roster">Save To Roster</string>
    <string name="clear_lineup">Clear Lineup</string>
    <string name="go_to_roster">Go To Roster</string>
    <string name="lineup">Lineup</string>
    <string-array name="boat_size_array">
        <item>8+</item>
        <item>4+</item>
        <item>4x</item>
        <item>2+</item>
        <item>2x</item>
        <item>1x</item>
    </string-array>

</resources>
