<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/view_camera_and_title"
                     android:layout_width="match_parent"
                    />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/athlete_statistics"
                style="?android:listSeparatorTextViewStyle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/twok_fragment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_2k"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <EditText
                android:id="@+id/sixk_fragment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_6k"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <EditText
                android:id="@+id/weight_fragment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <EditText
                android:id="@+id/height_fragment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <RadioGroup
                android:id="@+id/radio_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/starboard_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starboard"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/port_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/both_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/cox_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coxswain"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <Button
                android:id="@+id/link_athlete_contact_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/link_athlete_contact"
                />

            <Button
                android:id="@+id/contact_athlete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/contact_athlete"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>