<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_lineup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context="ggr.tpl7.LineupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/image_boat_layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/lineup_cox_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_8_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_7_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_6_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_5_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_4_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_3_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_2_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/lineup_1_image_button_view"
            android:text=""
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/image_boat_layout">

        <TextView
            android:id="@+id/lineup_cox_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/coxswain"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_8_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_8_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_7_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_7_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_6_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_6_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_5_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_5_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_4_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_4_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_3_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_3_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_2_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_2_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"/>
        <TextView
            android:id="@+id/lineup_1_text_name_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="@string/_1_seat"
            android:padding="4dp"
            android:textSize="16sp"
            android:layout_height="55dp"
            />
    </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/current_rower"
                android:textStyle="normal|bold"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/current_rower_name"
            android:text="No Rower Selected"
            />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/current_rower_side"
                android:text=""
                />
        </TableRow>
    </TableLayout>

</RelativeLayout>
