<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="4dp">

        <ImageView android:id="@+id/athlete_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:contentDescription="@string/athlete_image" />
        <ImageButton android:id="@+id/athlete_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/athlete_image" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <EditText
            android:id="@+id/athlete_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            style="?android:listSeparatorTextViewStyle"
            android:textSize="20sp"
            android:inputType="textCapWords"/>

        <EditText android:id="@+id/athlete_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/last_name"
            android:inputType="textCapWords"/>
    </LinearLayout>
</LinearLayout>